--- a/images/templates/image_create.html
+++ b/images/templates/image_create.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block content %}
 
 <h1>Create</h1>
-<form method="POST">
+<form method="POST" enctype="multipart/form-data">
   {% csrf_token %}
   <div>
     <label for="imgName">Name:</label>
