small improvement & add delete func

--- a/images/templates/image_create.html
+++ b/images/templates/image_create.html
@@ -9,8 +9,9 @@
   </div>
   <div>
     <label for="img">Image:</label>
-    <input type="file" id="img" name="img" />
+    <input type="file" id="img" name="img" accept="image/*"/>
   </div>
   <input type="submit" value="Save" />
 </form>
+<a href="/">See all images</a>
 {% endblock %}
