--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,14 @@
+{%load static%}
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>learn django</title>
+    <link rel="stylesheet" href={%static "style/mystyle.css"%} />
   </head>
   <body>
-  {% comment %} we can have serveral blocks with different name(i.e. content, content2) {% endcomment %}
-    {% block content %} replace me {% endblock %}
+    {% comment %} we can have serveral blocks with different name(i.e. content,
+    content2) {% endcomment %} {% block content %} replace me {% endblock %}
   </body>
 </html>
