--- a/images/templates/image_detail.html
+++ b/images/templates/image_detail.html
@@ -1,17 +1,36 @@
 {% extends 'base.html' %} {% block content %}
 
-<h1>Search</h1>
+<div id="header">
+<h1>Images</h1>
 <form method="GET">
-  <div>
     <label for="imgName">Name:</label>
     <input type="text" id="imgName" name="imgName" placeholder="Image Name" />
-  </div>
   <input type="submit" value="Search" />
 </form>
-{% if not img %}
-     <p>No image with this name</p>           
-{% endif %}
-{% for i in img %}
-                <img src="{{media_url}}{{ i.upload }}">
-{% endfor %}
+</div>
+<hr />
+{% if img %}
+<form
+      action="/delete/"
+      method="POST"
+      enctype="multipart/form-data"
+    >
+    {% csrf_token %}
+    <input type="submit" value="Delete all" />
+    </form>
+{%endif%}
+{% if request.GET.imgName and not img %}
+<p>No image with name <strong>{{request.GET.imgName}}</strong> <a href="/create">upload</a></p>
+{%endif%} 
+{% if not request.GET.imgName and not img %}
+<p>No Images. Feel free to <a href="/create">upload</a></p>
+{%endif%}
+<div id="showImages">
+  {% for i in img %}
+  <div>
+    <img src="{{media_url}}{{ i.upload }}" />
+    <p>name: {{i.name}}</p>
+  </div>
+  {% endfor %}
+</div>
 {% endblock %}
