--- a/static/style/mystyle.css
+++ b/static/style/mystyle.css
@@ -1,19 +1,23 @@
+#ac {
+  display: flex;
+}
+
 #header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 #showImages {
-    display: flex;
+  display: flex;
 }
 
 #showImages div {
-    margin-right: 5px;
+  margin-right: 5px;
 }
 
 img {
-    width: 200px;
-    height: 200px;
-    object-fit: scale-down;
+  width: 200px;
+  height: 200px;
+  object-fit: scale-down;
 }
