--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>learn django</title>
+    <title>Image Repo</title>
     <link rel="stylesheet" href={%static "style/mystyle.css"%} />
   </head>
   <body>
